<resources>
    <string name="app_name">Curious Tale</string>
    <string name="title_home">Home</string>
    <string name="title_my_stories">My Stories</string>
    <string name="anon_acc_create_error">Failed to connect to the servers</string>
    <string name="see_my_stories_btn">see my stories</string>
    <string name="submit_story_btn">submit story</string>
    <string name="start_typing_hint">start typing…</string>
    <string name="title_answer">Story</string>
    <string name="day_streak_text">day streak</string>
    <string name="day_streak_subtitle_text">way to go on the new streak. keep it up on this new achievement</string>
    <string name="question_of_the_day_text">Question of the day</string>
    <string name="title_question">Question</string>
    <string name="see_updates_text">see updates</string>
    <string name="checkout_btn_text">checkout</string>
    <string name="start_a_story_btn_text">start a story</string>
    <string name="answer_edittext_content_desc">answer edittext</string>
    <string name="please_enter_answer_prompt">few words wont hurt</string>
    <string name="answer_submit_error">There ware error submitting your story</string>
    <string name="answer_submit_success">Thanks for submitting your story</string>
    <string name="no_question_for_today_text">No Question for today!</string>
    <string name="no_story_error_text">No stories yet. Start exploring your next awesome story!</string>
    <string name="no_insights_error_text">No insights yet. We will posting some soon!</string>
    <string name="answered_btn_text">answered</string>
    <string name="title_settings">Settings</string>
    <string name="socials_pref_category">socials</string>
    <string name="general_pref_category">general</string>
    <string name="join_discord_text">Join the discord community</string>
    <string name="follow_twitter_text">Follow us on twitter</string>
    <string name="suggest_text">Submit a suggestion</string>
    <string name="submit_suggestion_btn">submit suggestion</string>
    <string name="empty_suggestion_error">some words would be helpful</string>
    <string name="suggestion_submit_error">Failed to submit your suggestion</string>
    <string name="suggestion_success">thanks for the suggestion</string>
    <string name="title_insights">Insights</string>
    <string name="discord_summary">the community needs you</string>
    <string name="twitter_summary">we tweet app updates and insights</string>
    <string name="suggestion_summary">suggest new features and questions you would like to see in the future</string>
    <string name="notification_title">New question for you!</string>
    <string name="notification_subtitle">start your awesome story now</string>
    <string name="notification_category_desc">daily notifications</string>
    <string name="notification_channel">Daily Notifications</string>
    <string name="share_pref_summary">let your friends know, hop on the journey of self-discovery</string>
    <string name="share_pref_title">Share with friends</string>
    <string name="rate_pref_summary">reviews help other people wanting to try our app</string>
    <string name="rate_pref_title">Rate us</string>
    <string name="invitation_message">Hi! Check out this fun app! \n</string>
    <string name="invite_friends_text">Invite Friends</string>
    <string name="home_app_name">Curious\nTale</string>
    <string name="home_tagline">Your Daily Journey of Self-Discovery</string>
    <string name="home_slogan">making a change with a question per day</string>
    <string name="get_started_btn_text">Get Started</string>
    <string name="starting_now_text">Starting now…</string>
</resources>