<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/general_pref_category">

        <Preference
            app:key="suggestion"
            app:iconSpaceReserved="false"
            app:summary="@string/suggestion_summary"
            app:title="@string/suggest_text" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/socials_pref_category">

        <Preference
            app:key="twitter"
            app:iconSpaceReserved="false"
            app:summary="@string/twitter_summary"
            app:title="@string/follow_twitter_text" />

        <Preference
            app:key="discord"
            app:iconSpaceReserved="false"
            app:summary="@string/discord_summary"
            app:title="@string/join_discord_text" />

    </PreferenceCategory>

</PreferenceScreen>