<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="app.curioustale.curioustale.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_my_stories"
        android:name="app.curioustale.curioustale.ui.stories.StoriesFragment"
        android:label="@string/title_my_stories"
        tools:layout="@layout/fragment_stories" />

    <fragment
        android:id="@+id/navigation_insights"
        android:name="app.curioustale.curioustale.ui.insights.InsightsFragment"
        android:label="@string/title_insights"
        tools:layout="@layout/fragment_insights" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="app.curioustale.curioustale.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/answer_fragment"
        android:name="app.curioustale.curioustale.ui.answer.AnswerFragment"
        android:label="@string/title_answer"
        tools:layout="@layout/fragment_answer" />

    <fragment
        android:id="@+id/question_fragment"
        android:name="app.curioustale.curioustale.ui.question.QuestionFragment"
        android:label="@string/title_question"
        tools:layout="@layout/fragment_question"/>
</navigation>