<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        style="@style/Widget.Material3.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etl_suggestion"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/start_typing_hint"
                app:boxCornerRadiusBottomEnd="@dimen/radius"
                app:boxCornerRadiusBottomStart="@dimen/radius"
                app:boxCornerRadiusTopEnd="@dimen/radius"
                app:boxCornerRadiusTopStart="@dimen/radius">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/answer_edittext_content_desc"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/submit_suggestion_btn" />

        </LinearLayout>

    </FrameLayout>

</ScrollView>